--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 			<groupId>io.rest-assured</groupId>
 			<artifactId>rest-assured</artifactId>
 			<version>4.1.2</version>
-			<scope>test</scope>
+			<scope>compile</scope>
 		</dependency>
 
 
@@ -24,7 +24,7 @@
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
 			<version>7.0.0</version>
-			<scope>test</scope>
+			<scope>compile</scope>
 		</dependency>
 
 
